--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-xs-6 col-sm-offset-2 col-sm-8 col-lg-offset-3 col-lg-6">
+  <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-lg-offset-3 col-lg-6">
     <%= form_for(task) do |f| %>
       <% if task.errors.any? %>
         <div id="error_explanation">
@@ -11,19 +11,16 @@
         </div>
       <% end %>
     
-    <table class="table table-bordered">
-      <tr>
-      <th class="text-center"><%= f.label :status, 'ステータス' %></th>
-      <th class="text-center"><%= f.text_field :status %></th>
-      </tr>
-      
-      <tr>
-      <th class="text-center"><%= f.label :content, 'タスク' %></th>
-      <th class="text-center"> <%= f.text_field :content %></th>
-      </tr>
-      </table>
-    
+  <div class="form-group">
+    <%= f.label :status, 'ステータス'%>
+    <%= f.text_field :status, class: 'form-control' %>
+  </div>
+  
+  <div class="form-group">
+    <%= f.label :content, 'コンテンツ'%> 
+    <%= f.text_field :content, class: 'form-control' %>
+  </div>
+
       <%= f.submit '投稿' %>
     <% end %>
   </div>
-</div>
